--- a/website-homepage/index.html
+++ b/website-homepage/index.html
@@ -27,11 +27,10 @@
       <div class="sidebar-heading">Contents</div>
       <div class="list-group list-group-flush">
         <a href="hello.html" class="list-group-item list-group-item-action bg-light">Game</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+        <a href="#" class="list-group-item list-group-item-action
+          bg-light">Donation Page</a>
+        <a href="#" class="list-group-item list-group-item-action
+          bg-light">Become a charity partner</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
