--- a/website-homepage/index.html
+++ b/website-homepage/index.html
@@ -26,8 +26,8 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">Contents</div>
       <div class="list-group list-group-flush">
-        <a href="hello.html" class="list-group-item list-group-item-action bg-light">Game</a>
-        <a href="#" class="list-group-item list-group-item-action
+        <a href="#" class="list-group-item list-group-item-action bg-light">Game</a>
+        <a href="donation.html" class="list-group-item list-group-item-action
           bg-light">Donation Page</a>
         <a href="#" class="list-group-item list-group-item-action
           bg-light">Become a charity partner</a>
