updated home page contents

--- a/website-contents/contact-us.html
+++ b/website-contents/contact-us.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> Become a charity partner </title>
+    <title> Contact Us </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,7 @@
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="form_need">Please specify your need *</label>
+                  <label for="form_need">Specify your need *</label>
                   <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
                     <option value=""></option>
                     <option value="Request to become a charity partner">Request to become a charity
