--- a/website-contents/index.html
+++ b/website-contents/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title> Fruits & Vegetables Concentration Game </title>
+  <title> Fruits & Veggies Fun </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,8 +26,10 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">Contents</div>
       <div class="list-group list-group-flush">
-        <a href="game/Game.html" class="list-group-item list-group-item-action bg-light">Game</a>
-        <a href="donation.html" class="list-group-item list-group-item-action bg-light">Donation Page</a>
+        <a href="game/Game.html" class="list-group-item list-group-item-action
+          bg-light">Play the Game</a>
+        <a href="donation.html" class="list-group-item list-group-item-action
+          bg-light">Donate</a>
         <a href="contact-us.html" class="list-group-item list-group-item-action
           bg-light">Contact Us</a>
       </div>
@@ -42,7 +44,7 @@
       </nav>
 
       <div class="container-fluid">
-        <h1 class="mt-4">Fruits & Vegetables Concentration Game</h1>
+        <h1 class="mt-4">Fruits & Veggies Fun</h1>
         <p> Welcome to the main page! </p> 
       </div>
     </div>
