--- a/website-contents/donation.html
+++ b/website-contents/donation.html
@@ -32,7 +32,8 @@ body {
     <div class="d-flex vh-100">
       <div class="d-flex w-100 justify-content-center align-self-center" id="wrapper">
         <iframe
-          src="https://paymentiframe.com/tag.cgi?u=https%3A%2F%2Ffruitsandveggiesfun.com/submission.html&k=pk_test_51HjaMKGBXWEcKDMyLLsTrDnB7RxkYee7qqYo0hYybAc2Hc5uahpvtKa6GvMdiUPRZCJ8cOsQQfEX7oCeWxYD2Bik00JAPae1it&t=Donate%20%241&n0=NAME&v0=VALUE" frameBorder=0 height=230px width=350px></iframe> 
+          src="https://paymentiframe.com/tag.cgi?u=https%3A%2F%2Ffruitsandveggiesfun.com/submission.html&k=pk_test_51HjaMKGBXWEcKDMyLLsTrDnB7RxkYee7qqYo0hYybAc2Hc5uahpvtKa6GvMdiUPRZCJ8cOsQQfEX7oCeWxYD2Bik00JAPae1it&t=Donate%20%241&n0=NAME&v0=VALUE"
+          frameBorder=0 height=260px width=350px scrolling=no></iframe> 
 
       </div>
     </div>
