--- a/website-contents/contact-us.html
+++ b/website-contents/contact-us.html
@@ -14,34 +14,18 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Use background image on the entire page -->
-    <style>
-body {
-  background: url('wallpaper/desk-wallpaper.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-}
-
-.btn-success.btn-send {
-	background-color: #000;
-	border-color: #000;
-}
-    </style>
-
+    <link href="css/contact-form.css" rel="stylesheet">
   </head>
 
   <body>
+    <!-- Place content in the middle of the page -->
     <div class="d-flex vh-100">
-
       <div class="d-flex w-100 justify-content-center align-self-center" id="wrapper">
 
+        <!-- Contact Form -->
         <form id="contact-form" method="post" action="contact.php" role="form">
-
           <div class="messages"></div>
-
           <div class="controls">
-
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
