modified home and donation page contents

--- a/website-contents/index.html
+++ b/website-contents/index.html
@@ -29,7 +29,7 @@
         <a href="game/Game.html" class="list-group-item list-group-item-action
           bg-light">Play the Game</a>
         <a href="donation.html" class="list-group-item list-group-item-action
-          bg-light">Donate</a>
+          bg-light">Donate to Rosa Mary Nutrition Association</a>
         <a href="contact-us.html" class="list-group-item list-group-item-action
           bg-light">Contact Us</a>
       </div>
